# gitlab-docs-mcp

./: .gitignore  DOCKER_MCP_REGISTRY.md  LICENSE  README.md  build-and-push.sh  pyproject.toml  requirements.txt  server.json
.docker-mcp-registry/: readme.md  server.yaml  tools.json
docker/: Dockerfile  clone-docs.sh
indexer/: build_index.py
server/: main.py
